--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>D1screet Meetings</title>
-<meta content='https://i.imgur.com/m1XETt4.jpeg' property='og:image'/>
+<meta content='https://i.postimg.cc/BZP4cr4c/0424.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
