--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>night shifts, 1 hour</title>
+<title>night shifts, 1 h0ur</title>
 <meta content='https://i.postimg.cc/BZP4cr4c/0424.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
